menus aded and packages introduced